--- a/css/index.css
+++ b/css/index.css
@@ -3,8 +3,9 @@ good blue: #0072e0
 grayish: #d5d5db */
 
 body {
-        /* background-image: linear-gradient(rgb(9, 98, 128), white);  */
+        /* background-image: linear-gradient(blue, yellow);  */
         background-color: #FCFCFC;
+        /* background-color: #db4088; */
         font-family: 'Roboto', sans-serif;
         display: flex;
         flex-direction: column;
